# fits_schema

./: .flake8  .travis.yml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  deploy.yml
fits_schema/: binary_table.py  exceptions.py  header.py  primary.py  utils.py
tests/: test_binary_table.py  test_header.py  test_utils.py
