[tool.poetry]
name = "fits_schema"
version = "0.1.0"
description = ""
authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]

[tool.poetry.dependencies]
python = "^3.6"
astropy = ">=3.0"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
