[tool.poetry]
name = "fits_schema"
version = "0.4.0"
description = ""
authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
astropy = ">=3.0"
numpy = "^1.16"
codecov = {version = "^2.0.22", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pytest-cov = "^2.8"
ipython = "^7.13.0"

[tool.poetry.extras]
# additional packages needed on travis
travis = ["codecov"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
