[tool.poetry]
name = "fits_schema"
version = "0.5.5"
description = ""
authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
astropy = "^4.0"
numpy = "^1.17"
codecov = {version = "^2.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pytest-cov = "^2.8"
ipython = "^7.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
