[metadata]
name = fits_schema
version = attr: fits_schema.__version__
author = Maximilian Nöthe
author_email = maximilian.noethe@tu-dortmund.de
url = https://github.com/open-gamma-ray-astro/fits_schema
description = A python package to define and validate schemata for FITS files.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
install_requires =
  numpy
  astropy >= 4

[options.extras_require]
tests =
    pytest
    pytest-cov
ci =
	codecov
	pyflakes
all =
	%(ci)s
    %(tests)s

[options.entry_points]
console_scripts =
    fibonacci = eschool21_demo.__main__:main

[options.package_data]
